--- a/juegos/templates/juegos/secuencia_animales.html
+++ b/juegos/templates/juegos/secuencia_animales.html
@@ -1085,7 +1085,7 @@ class AnimalSequenceGame {
             correct: 'correcto',
             incorrect: 'incorrecto',
             start: 'inicio_animales',
-            complete: 'completado_animales',
+            complete: 'completado',
             instructions: 'instrucciones_animales'
         };
 
