Actualizacion de nombres

--- a/juegos/templates/juegos/rompecabezas.html
+++ b/juegos/templates/juegos/rompecabezas.html
@@ -1678,7 +1678,7 @@ class PuzzleGame {
     setupGameAudio() {
         const gameAudioFiles = {
             correct: 'correcto',
-            incorrect: 'incorrecto', 
+            incorrect: 'incorrect', 
             start: 'inicio',
             complete: 'completado'
         };
