Actualizacion de sonidos

--- a/juegos/templates/juegos/memoria_cartas.html
+++ b/juegos/templates/juegos/memoria_cartas.html
@@ -907,7 +907,7 @@ class MemoryGame {
     setupGameAudio() {
         const gameAudioFiles = {
             correct: 'correcto',
-            incorrect: 'incorrecto', 
+            incorrect: 'incorrect', 
             start: 'vamos_a_jugar',
             complete: 'juego_completado'
         };
