--- a/juegos/templates/juegos/memoria_cartas.html
+++ b/juegos/templates/juegos/memoria_cartas.html
@@ -1,7 +1,7 @@
 {% extends 'juegos/base.html' %}
 {% load static %}
 
-{% block title %}🧠💝 Memoria de Cartas - 🌈 Imaginamente 🌈{% endblock %}
+{% block title %}🧠💝 Memoria de Cartas - 🌈 SecuKids 🌈{% endblock %}
 
 {% block content %}
 <style>
