--- a/juegos/templates/juegos/rompecabezas.html
+++ b/juegos/templates/juegos/rompecabezas.html
@@ -1,7 +1,7 @@
 {% extends 'juegos/base.html' %}
 {% load static %}
 
-{% block title %}🧩🖼️ Rompecabezas - 🌈 Imaginamente 🌈{% endblock %}
+{% block title %}🧩🖼️ Rompecabezas - 🌈 SecuKids 🌈{% endblock %}
 
 {% block content %}
 <style>
