--- a/juegos/templates/juegos/secuencia_eventos.html
+++ b/juegos/templates/juegos/secuencia_eventos.html
@@ -1,7 +1,7 @@
 {% extends 'juegos/base.html' %}
 {% load static %}
 
-{% block title %}📚⏰ Secuencia de Eventos - 🌈 Imaginamente 🌈{% endblock %}
+{% block title %}📚⏰ Secuencia de Eventos - 🌈 SecuKids 🌈{% endblock %}
 
 {% block content %}
 <style>
