--- a/juegos/templates/juegos/secuencia_animales.html
+++ b/juegos/templates/juegos/secuencia_animales.html
@@ -1,7 +1,19 @@
 {% extends 'juegos/base.html' %}
 {% load static %}
 
-{% block title %}🎵🐾 Secuencia de Animales - 🌈 Imaginamente 🌈{% endblock %}
+{% block title %}{{ titulo }}{% endblock %}
+
+{% block meta_description %}{{ meta_description }}{% endblock %}
+{% block meta_keywords %}{{ meta_keywords }}{% endblock %}
+{% block canonical_url %}{{ canonical_url }}{% endblock %}
+
+{% block og_title %}{{ og_title }}{% endblock %}
+{% block og_description %}{{ og_description }}{% endblock %}
+{% block og_url %}{{ canonical_url }}{% endblock %}
+
+{% block twitter_title %}{{ og_title }}{% endblock %}
+{% block twitter_description %}{{ og_description }}{% endblock %}
+{% block twitter_url %}{{ canonical_url }}{% endblock %}
 
 {% block content %}
 <style>
