Palabra universitario cambiado v2

--- a/juegos/templates/juegos/base.html
+++ b/juegos/templates/juegos/base.html
@@ -834,7 +834,7 @@
             
             <div class="university-info">
                 <strong>🏛️ Universidad Técnica de Babahoyo</strong><br>
-                <span>Centro de Nivelación y Admisión Universitario/span><br>
+                <span>Centro de Nivelación y Admisión Universitario</span><br>
                 <span>Carrera de Educación Inicial • Año 2025</span>
             </div>
             
