--- a/juegos/templates/juegos/base.html
+++ b/juegos/templates/juegos/base.html
@@ -59,22 +59,99 @@
             "name": "Juegos Educativos",
             "itemListElement": [
                 {
-                    "@type": "Course",
+                    "@type": "Game",
                     "name": "Secuencia de Animales",
-                    "description": "Juego para desarrollar memoria auditiva",
-                    "url": "https://secukids.onrender.com/secuencia-animales/"
+                    "description": "Juego educativo para desarrollar memoria auditiva y reconocimiento de sonidos de animales",
+                    "url": "https://secukids.onrender.com/secuencia-animales/",
+                    "genre": "Educational Game",
+                    "audience": {
+                        "@type": "Audience",
+                        "audienceType": "Children",
+                        "suggestedMinAge": 3,
+                        "suggestedMaxAge": 10
+                    },
+                    "educationalAlignment": {
+                        "@type": "AlignmentObject",
+                        "alignmentType": "teaches",
+                        "educationalFramework": "Desarrollo Cognitivo",
+                        "targetName": "Memoria Auditiva"
+                    }
                 },
                 {
-                    "@type": "Course", 
+                    "@type": "Game",
                     "name": "Secuencia de Colores",
-                    "description": "Juego para desarrollar memoria visual",
-                    "url": "https://secukids.onrender.com/secuencia-colores/"
+                    "description": "Juego educativo para desarrollar memoria visual y reconocimiento de patrones",
+                    "url": "https://secukids.onrender.com/secuencia-colores/",
+                    "genre": "Educational Game",
+                    "audience": {
+                        "@type": "Audience",
+                        "audienceType": "Children",
+                        "suggestedMinAge": 3,
+                        "suggestedMaxAge": 10
+                    },
+                    "educationalAlignment": {
+                        "@type": "AlignmentObject",
+                        "alignmentType": "teaches",
+                        "educationalFramework": "Desarrollo Cognitivo",
+                        "targetName": "Memoria Visual"
+                    }
                 },
                 {
-                    "@type": "Course",
-                    "name": "Rompecabezas Interactivo", 
-                    "description": "Juego para desarrollar habilidades espaciales",
-                    "url": "https://secukids.onrender.com/rompecabezas/"
+                    "@type": "Game",
+                    "name": "Rompecabezas Interactivo",
+                    "description": "Juego educativo para desarrollar habilidades espaciales y coordinación visomotora",
+                    "url": "https://secukids.onrender.com/rompecabezas/",
+                    "genre": "Educational Game",
+                    "audience": {
+                        "@type": "Audience",
+                        "audienceType": "Children",
+                        "suggestedMinAge": 4,
+                        "suggestedMaxAge": 12
+                    },
+                    "educationalAlignment": {
+                        "@type": "AlignmentObject",
+                        "alignmentType": "teaches",
+                        "educationalFramework": "Desarrollo Cognitivo",
+                        "targetName": "Habilidades Espaciales"
+                    }
+                },
+                {
+                    "@type": "Game",
+                    "name": "Memoria de Cartas",
+                    "description": "Juego clásico de memoria para desarrollar concentración y memoria a corto plazo",
+                    "url": "https://secukids.onrender.com/memoria-cartas/",
+                    "genre": "Educational Game",
+                    "audience": {
+                        "@type": "Audience",
+                        "audienceType": "Children",
+                        "suggestedMinAge": 4,
+                        "suggestedMaxAge": 12
+                    },
+                    "educationalAlignment": {
+                        "@type": "AlignmentObject",
+                        "alignmentType": "teaches",
+                        "educationalFramework": "Desarrollo Cognitivo",
+                        "targetName": "Concentración y Memoria"
+                    }
+                },
+                {
+                    "@type": "Game",
+                    "name": "Secuencia de Eventos",
+                    "description": "Juego educativo para desarrollar pensamiento lógico y comprensión temporal",
+                    "url": "https://secukids.onrender.com/secuencia-eventos/",
+                    "genre": "Educational Game",
+                    "audience": {
+                        "@type": "Audience",
+                        "audienceType": "Children",
+                        "suggestedMinAge": 5,
+                        "suggestedMaxAge": 12
+                    },
+                    "educationalAlignment": {
+                        "@type": "AlignmentObject",
+                        "alignmentType": "teaches",
+                        "educationalFramework": "Desarrollo Cognitivo",
+                        "targetName": "Lógica Temporal"
+                    }
                 }
             ]
         }
