--- a/juegos/templates/juegos/memoria_cartas.html
+++ b/juegos/templates/juegos/memoria_cartas.html
@@ -1,7 +1,56 @@
 {% extends 'juegos/base.html' %}
 {% load static %}
 
-{% block title %}🧠💝 Memoria de Cartas - 🌈 SecuKids 🌈{% endblock %}
+{% block title %}{{ titulo }}{% endblock %}
+
+{% block meta_description %}{{ meta_description }}{% endblock %}
+{% block meta_keywords %}{{ meta_keywords }}{% endblock %}
+{% block canonical_url %}{{ canonical_url }}{% endblock %}
+
+{% block og_title %}{{ og_title }}{% endblock %}
+{% block og_description %}{{ og_description }}{% endblock %}
+{% block og_url %}{{ canonical_url }}{% endblock %}
+
+{% block twitter_title %}{{ og_title }}{% endblock %}
+{% block twitter_description %}{{ og_description }}{% endblock %}
+{% block twitter_url %}{{ canonical_url }}{% endblock %}
+
+<!-- Schema markup específico para este juego -->
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "Game",
+    "name": "Memoria de Cartas",
+    "description": "Juego clásico de memoria con cartas para desarrollar concentración y memoria a corto plazo en niños",
+    "url": "https://secukids.onrender.com/memoria-cartas/",
+    "image": "https://secukids.onrender.com/static/images/secukids_logo.png",
+    "genre": "Educational Game",
+    "gamePlatform": "Web Browser",
+    "applicationCategory": "Educational",
+    "operatingSystem": "Any",
+    "isAccessibleForFree": true,
+    "inLanguage": "es",
+    "audience": {
+        "@type": "Audience",
+        "audienceType": "Children",
+        "suggestedMinAge": 4,
+        "suggestedMaxAge": 12
+    },
+    "educationalAlignment": {
+        "@type": "AlignmentObject",
+        "alignmentType": "teaches",
+        "educationalFramework": "Desarrollo Cognitivo Infantil",
+        "targetName": "Concentración y Memoria a Corto Plazo"
+    },
+    "publisher": {
+        "@type": "Organization",
+        "name": "SecuKids",
+        "url": "https://secukids.onrender.com"
+    },
+    "datePublished": "2024-01-01",
+    "dateModified": "2025-08-14"
+}
+</script>
 
 {% block content %}
 <style>
